RESOLVED FIXED269582
[WebGPU] GPUCanvasContext.configure(Rgba16float) crashes in IOSurface creation
https://bugs.webkit.org/show_bug.cgi?id=269582
Summary [WebGPU] GPUCanvasContext.configure(Rgba16float) crashes in IOSurface creation
Mike Wyrzykowski
Reported 2024-02-16 09:10:01 PST
[WebGPU] GPUCanvasContext.configure(Rgba16float) crashes in IOSurface creation
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-16 09:11:28 PST
Mike Wyrzykowski
Comment 2 2024-02-16 15:58:23 PST
EWS
Comment 3 2024-02-19 12:51:05 PST
Committed 274994@main (303744063b76): <https://commits.webkit.org/274994@main> Reviewed commits have been landed. Closing PR #24662 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.