[WebGPU] GPUCanvasContext.configure(Rgba16float) crashes in IOSurface creation https://bugs.webkit.org/show_bug.cgi?id=269582 <radar://123096556>

Reviewed by Dan Glastonbury.

rgba16float is a supported GPUCanvasContext format according to the specification,
but HTMLCanvas doesn't support rgba16float yet. So according to the WebGPU specification,
we are supposed to clamp the luminance to [0,1], leaving the chroma unchanged.

Do so with a custom compute shader.

* Source/WebGPU/WebGPU/PresentationContextIOSurface.h:
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::recreateIfNeeded):
(WebGPU::Texture::formatToString):

Canonical link: https://commits.webkit.org/274994@main