Source/WebGPU/WebGPU/Texture.h
@@ -117,6 +117,7 @@ public:
     void recreateIfNeeded();
     void makeCanvasBacking();
     void setCommandEncoder(CommandEncoder&) const;
+    static const char* formatToString(WGPUTextureFormat);
 
 private:
     Texture(id<MTLTexture>, const WGPUTextureDescriptor&, Vector<WGPUTextureFormat>&& viewFormats, Device&);
